# Deanery

./: CMakeLists.txt  README.md
data_base/: groups.txt  students.txt
data_base/init/: init.cpp  init.txt
include/: Deanery.h  Group.h  Student.h
src/: Deanery.cpp  Group.cpp  Student.cpp  main.cpp
