cmake_minimum_required (VERSION 3.10.2)
project(Deanery)
project(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 17)
include_directories(${PROJECT_SOURCE_DIR}/include)
file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_library(deanery_lib ${SRC_FILES})
set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)

add_executable(Deanery ${PROJECT_SOURCE_DIR}/src/main.cpp)
target_link_libraries(Deanery deanery_lib)
